# Vulcany

./: .gitignore  Cargo.toml  Readme.md
.cache/: fragment_shader.spv  shader_data.json  vertex_shader.spv
examples/: test.rs
examples/shaders/: fragment_shader.slang  vertex_shader.slang
src/: lib.rs
src/allocator/: allocation_info.rs  free_list_allocator.rs  gpu_allocator.rs  mod.rs
src/backend/: buffer.rs  commands.rs  device.rs  gpu_resources.rs  instance.rs  mod.rs  pipelines.rs  swapchain.rs
src/core/: buffer.rs  commands.rs  context.rs  definations.rs  device.rs  gpu_resources.rs  image.rs  instance.rs  mod.rs  pipelines.rs  swapchain.rs
src/definations/: commands.rs  core.rs
src/taskgraph/: commands.rs  definations.rs  mod.rs  task_graph.rs
src/utils/: mod.rs  vulkan_context.rs
vulcany/: Cargo.toml
vulcany/src/: lib.rs  vulcany.slang
vulcany/src/backend/: device.rs  gpu_resources.rs  image.rs  instance.rs  pipelines.rs
vulcany/src/core/: commands.rs  device.rs  instance.rs  mod.rs  pipelines.rs  swapchain.rs
vulcany/src/definations/: commands.rs  core.rs  gpu_resources.rs  mod.rs  pipelines.rs
vulcany/src/taskgraph/: definations.rs  mod.rs  task_graph.rs
vulcany/src/utils/: vulkan_context.rs
vulcany_examples/fractal/: Cargo.toml
vulcany_examples/fractal/shaders/: fragment.slang  vertex.slang
vulcany_examples/fractal/src/: camera.rs  main.rs  renderer.rs
vulcany_examples/triangle/shaders/: fragment_shader.slang  vertex_shader.slang  vulcany.slang
vulcany_examples/triangle/src/: main.rs
