[package]
name = "vulcany"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "*", features = ["linked"] }
vk-mem = { git = "https://github.com/pingpong74/vk-mem-rs", branch = "master" }

raw-window-handle = "*"
image = "*"
bytemuck = {version = "*", features = ["derive"]}
memoffset = "*"
smallvec = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

[dev-dependencies]
winit = "*"

[allow]
unused = "*"
