[package]
name = "vulcany"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "vulkan"]
exclude = ["/examples", "/.cache"]
description = "A high performance vulkan abstraction layer"
readme = "Readme.md"
repository = "https://github.com/pingpong74/Vulcany"

[dependencies]
ash                 = { version = "0.38.0", features = ["linked"] }
vk-mem              = { git = "https://github.com/pingpong74/vk-mem-rs", branch = "master"}
delegate            = "0.13.2"
raw-window-handle   = "0.6.2"
bytemuck            = { version = "1.19.0", features = ["derive"], public = true }
memoffset           = "0.9.1"
smallvec            = "1.13.2"
serde               = { version = "1.0.215", features = ["derive"] }
serde_json          = "1.0.132"
ahash               = "0.8.11"
crossbeam           = "0.8.4"
